testdata/baselines/reference/submodule/conformance/nullishCoalescingOperatorInParameterBindingPattern.2(target=es2015).errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
nullishCoalescingOperatorInParameterBindingPattern.2.ts(3,6): error TS2537: Type '{}' has no matching index signature for type 'string'.
nullishCoalescingOperatorInParameterBindingPattern.2.ts(6,6): error TS2537: Type '{ d?: string; }' has no matching index signature for type 'string'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== nullishCoalescingOperatorInParameterBindingPattern.2.ts (2 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    const a = (): string | undefined => undefined;
    (({ [a() ?? "d"]: c = "" }) => { var a; })();
         ~~~~~~~~~~
!!! error TS2537: Type '{}' has no matching index signature for type 'string'.
    
    const x = "";
    (({ [a() ?? "d"]: c = "", d = x }) => { var x; })();
         ~~~~~~~~~~
!!! error TS2537: Type '{ d?: string; }' has no matching index signature for type 'string'.